temporary fix for layout shift when opening modals

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   overflow-y: scroll;
+} */
+
+html {
+  scrollbar-gutter: stable;
 }
 
 /* body {
